Updated package.json file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-ui-devkit",
-  "version": "2.0.0",
+  "version": "2.0.2",
   "description": "Native UI Development Kit for React Native",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -30,67 +30,52 @@
   ],
   "keywords": [
     "react-native",
-    "reactnative",
+    "react-component",
     "react native",
-    "react native ui",
     "react-native-ui-devkit",
     "react native ui devkit",
+    "react-native interface",
+    "react-native components",
+    "react-native component",
+    "react-native uikit",
+    "react-native toolkit",
+    "react-native toolset",
+    "react-native theme",
+    "react-native themed",
+    "react-native styled",
     "rn-ui-devkit",
     "rn ui devkit",
-    "react-native ios",
-    "react-native android",
-    "react-native native-style",
-    "react native native-style",
-    "react-native template",
-    "react native template",
-    "react-native elements",
-    "react native elements",
+    "rnuidevkit",
+    "native-style",
+    "elements",
+    "rn elements",
     "react-native base",
-    "react native base",
-    "react-native interface",
-    "react native interface",
-    "react-native components",
-    "react native components",
-    "react-native component",
-    "react native component",
+    "rn base",
+    "rn interface",
+    "rn components",
+    "rn component",
     "react-native ui",
-    "react native ui",
-    "react-native uikit",
-    "react native uikit",
-    "react-native toolkit",
-    "react native toolkit",
-    "react-native toolset",
-    "react native toolset",
-    "react-native theme",
-    "react native theme",
-    "react-native themed",
-    "react native themed",
-    "react-native styled",
-    "react native styled",
-    "react-native action",
-    "react native action",
-    "react-native button",
-    "react native button",
-    "react-native card",
-    "react native card",
-    "react-native checkbox",
-    "react native checkbox",
-    "react-native collapsible",
-    "react native collapsible",
-    "react-native divider",
-    "react native divider",
-    "react-native flatlist",
-    "react native flatlist",
-    "react-native icon",
-    "react native icon",
-    "react-native radio",
-    "react native radio",
-    "react-native separator",
-    "react native separator",
-    "react-native swipeable",
-    "react native swipeable",
-    "react-native textinput",
-    "react native textinput"
+    "ui",
+    "rn ui",
+    "rn devkit",
+    "rn uikit",
+    "rn toolkit",
+    "rn toolset",
+    "rn theme",
+    "rn themed",
+    "rn styled",
+    "action",
+    "button",
+    "card",
+    "checkbox",
+    "collapsible",
+    "flatlist",
+    "icon",
+    "radio",
+    "swipeable",
+    "textinput",
+    "ios",
+    "android"
   ],
   "repository": {
     "type": "git",
